# kubitor

./: Makefile  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
examples/: annotation-config.yaml
src/: main.py
src/api/: __init__.py  analysis_service.py  scan_service.py
src/cli/: __init__.py  drift.py  main.py
src/core/: __init__.py  helm.py  history.py  organizer.py  reporter.py  scanner_service.py
src/database/: __init__.py  connection.py  service.py
src/exporters/: __init__.py  base.py  json_exporter.py  yaml_exporter.py
src/k8s/: __init__.py  client.py  scanner.py
src/model/: __init__.py  annotations.py  cluster.py  database.py  export.py  kubernetes.py  report.py
src/model/dao/: __init__.py  base_dao.py  change_dao.py  resource_dao.py  scan_dao.py
src/model/repository/: __init__.py  change_repository.py  historical_repository.py  resource_repository.py  scan_repository.py
src/upgrade/: __init__.py  advisor.py  versions.py
src/utils/: __init__.py  logger.py
tests/: conftest.py  test_deprecated_api_detection.py  test_k8s_client.py  test_models.py  test_upgrade_advisor.py
tests/api/: test_scan_service.py
tests/database/: test_connection.py  test_service.py
tests/integration/: test_database_integration.py
tests/model/: test_models.py
tests/model/dao/: __init__.py  test_dao.py
tests/model/repository/: __init__.py  test_repository.py
